--- a/css/responsive.css
+++ b/css/responsive.css
@@ -89,9 +89,9 @@ padding: 7px 15px;
      .top-header .navbar .navbar-collapse ul li a:hover, .top-header .navbar .navbar-collapse ul li a:focus {
          color: #0892fd;
     }
-     .slide_text p {
+     /* .slide_text p {
          display: none;
-    }
+    } */
      .contact_bt {
          margin-top: 10px;
     }
@@ -151,6 +151,10 @@ padding: 7px 15px;
          margin-left: 10px;
          margin-right: 10px;
     }
+    
+ .heee{
+    
+}
      .top-header .navbar .navbar-collapse ul li a{
          padding: 5px 15px;
     }
@@ -263,16 +267,21 @@ padding: 7px 15px;
     }
      .slide_text {
          margin-top: 10%;
-		 display:none;
+		 /* display:none; */
     }
      .slide_text h3 {
+
          font-size: 20px;
+         line-height:20px !important;
     }
      .slide_text h4 {
          font-size: 16px;
          margin: -20px 0;
     }
      .slide_text p {
+         display: none;
+    }
+     .slide_text a {
          display: none;
     }
      .contact_bt {
@@ -286,6 +295,10 @@ padding: 7px 15px;
          font-size: 14px;
          font-weight: 300;
          margin-top: 5px;
+    }
+    .layout_padding{
+        padding-top:  45px;
+        padding-bottom: 45px;
     }
      .top-header #navbar-wd {
          padding-right: 0;
